salesforce-migration/force-app/main/default/objects/Bouquet_Address__c/Bouquet_Address__c.object-meta.xml
<CustomObject>
    <label>Bouquet Address</label>
    <pluralLabel>Bouquet Addresses</pluralLabel>
    <nameField>
        <label>Address Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>