salesforce-migration/force-app/main/default/objects/Bouquet_Address__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <label>State</label>
    <type>Text</type>
    <length>100</length>
</CustomField>